# ashby-mcp

./: .env.example  .gitignore  LICENSE  README.md  openapi.json  pyproject.toml  render.yaml
evals/: README.md  __init__.py  fake_server.py  grader.py  run.py  runner.py  workspace.py
evals/cases/: 001_reengagement_sales.yaml  002_design_lead_narrative.yaml  003_outreach_personalized.yaml
src/ashby/: formatting.py  handlers.py  server.py  tools.py
tests/: conftest.py  test_formatting.py  test_live.py  test_routing.py
